# ho_tro_khuyet_tat

./: README.md  pubspec.yaml
android/: build.gradle
android/app/: build.gradle
assets/yolo/: best_cu_chi_v9.param  cam_diec.param  indoor.param  lighttraffic.ncnn.param  model.param  money_detection.param  w600k_mbf.param
dart_ncnn_yolov8/: ffigen.yaml  pubspec.yaml
dart_ncnn_yolov8/android/: build.gradle
dart_ncnn_yolov8/lib/: dart_ncnn_flutter.dart  face_result_painter.dart  nguoi_khuyet_tat_sdk.dart  nguoi_khuyet_tat_sdk_bindings_generated.dart  yolo_result_painter.dart
dart_ncnn_yolov8/src/: CMakeLists.txt  dart_ncnn_yolov8.cpp  deaf_detection.cpp  deaf_detection.h  emotion_recognition.cpp  emotion_recognition.h  face_emb.cpp  face_emb.h  light_traffic.cpp  light_traffic.h  money_detection.cpp  money_detection.h  nguoi_khuyet_tat_sdk.cpp  nguoi_khuyet_tat_sdk.h  object_detection.cpp  object_detection.h  scrfd.cpp  scrfd.h  scrfd_deaf.cpp  scrfd_deaf.h
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_lifecycle_observer.dart  main.dart
lib/models/: face_data.dart
lib/pages/: camera_page.dart  do_duong_page.dart  drawer_list_feature.dart  face_detect_page.dart  face_manager_page.dart  giao_tiep_cau_page.dart  giao_tiep_tu_page.dart  home_page.dart
lib/providers/: blind_camera_controller.dart  face_camera_controller.dart  giao_tiep_cau_camera_controller.dart  giao_tiep_tu_camera_controller.dart  ncnn_yolo_options.dart  nguoi_khuyet_tat_sdk_controller.dart  nguoi_mu_controller.dart
lib/utils/: cal_distance.dart  (+3 more)
test/: widget_test.dart
(+29 files in other folders)
